feat(gamepack): updates to revision 205 (#299)
* feat(gamepack): updates to revision 205

* feat(rs-client): updates for new revision

* api: add object composition map setters

* api: add post object composition event

* api: add object composition cache accessor

* clues: Add abyssal lanterns as light sources (#14923)

* chatfilter: add config option for stripping accents

* cache: update indextype names

* chat commands: fix loading pets modicons

The asyncbufferedimage may not be loaded at the time the modicons is setup, so a listener must be added to assign the final image

* emoji: clean up modicons loading

This just needs to be run after modicons is initialized, and doesn't
need to be checked on gamestate change.

* friendnotes: clean up modicons loading

This just needs to be run after modicons is initialized, and doesn't
need to be checked on gamestate change.

* timetracking: add compost tracking

* Perspective: fix clickbox for type 11 objects

* timers: remove unused tzhaar complete matcher

The usage of matches() vs find() is incorrect, but the timer is already removed when teleported from the arena

* rl-api: expose currently playing music/jingle

* clues: Fix capitalization for Dark Mage anagram

* timetracking: fix tick rate of teak trees

* spriteid: fix Guthix typo

* status bars: fix npe if sprites aren't loaded yet

* chat commands: fix matching random event rewards as kill messages

* widgetoverlay: add chatbox and inventory layers

* cache: add running/crawling anim opcodes from rev 205

* api: update Jagex API

* client: remove setupJxAuth

* Update Item IDs to 2022-5-11

* Update Item variations to 2022-5-11

* Update Object IDs to 2022-5-11

* Update NPC IDs to 2022-5-11

* feat: updates mixins & rs-api

* compost tracking: fix tracking fertile soil with ash covered tome

(cherry picked from commit 5c98c47803c1991abdd4b341fed77f9503fbf979)

* overlay: make alt drag hotk